ACF fields added to home page, all content looks good, though potential alignment issues

--- a/assets/sass/2.structure-layout-common-classes/_2.column-widths-positions-classes.scss
+++ b/assets/sass/2.structure-layout-common-classes/_2.column-widths-positions-classes.scss
@@ -23,6 +23,7 @@
 .content {
   float: right;
   width: 880px;
+  text-align: center;
 }
 
 .content-sidebar .content,
